[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "DFS/Prim maze generator with hex wall encoding, BFS solving, and an optional '42' pattern overlay."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Khachik" },
    { name = "Vahan" }
]

[tool.setuptools]
py-modules = ["mazegen"]